<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <RelativeLayout
            android:id="@+id/relativelayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:background="@drawable/my_common_dialog_top_bg" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="15dip"
                android:text="@string/choose_photo"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativelayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativelayout1"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:background="@drawable/my_common_dialog_center_bg" >

            <TextView
                android:id="@+id/contentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="14dip"
                android:gravity="center"
                android:text="@string/no_chat"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="visible" />

            <ListView
                android:id="@+id/contentListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="4dip"
                android:gravity="center"
                android:padding="2dip"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativelayout2"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dip"
                android:layout_height="45dp"
                android:layout_weight="1.0"
                android:background="@drawable/my_common_dialog_btn_left"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/ok"
                android:layout_width="0dip"
                android:layout_height="45dp"
                android:layout_weight="1.0"
                android:background="@drawable/my_common_dialog_btn_right"
                android:text="@string/OK" />

            <Button
                android:id="@+id/sure"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/my_common_dialog_btn_center"
                android:text="@string/OK"
                android:textColor="@color/blue_overlay"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>