<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <EditText
                android:id="@+id/phoneNumberEt"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableLeft="@drawable/phonenumber"
                android:drawablePadding="5dp"
                android:hint="请输入手机号码"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/white_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/getVerifyCodeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="#A1B5CA"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/get_verifycode"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="@color/white_gray" />

        <EditText
            android:id="@+id/verifyCodeEt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:drawableLeft="@drawable/verifycode"
            android:drawablePadding="5dp"
            android:hint="请输入验证码"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/white_gray"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/reminderTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/reminder"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/register_reminder"
        android:textColor="@color/gray_normal"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/reminderTv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/reminder"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/register_reminder1"
        android:textColor="@color/gray_normal"
        android:textSize="12sp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/theme_color"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>