<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/theme_color" >

            <ImageView
                android:id="@+id/settingIv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/mine_setting" />

            <ImageView
                android:id="@+id/messageIv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@id/settingIv"
                android:src="@drawable/mine_message"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/customerInfoRl"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/theme_color" >

            <ImageView
                android:id="@+id/avatarIv"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/avatar_default" />

            <TextView
                android:id="@+id/nickNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/avatarIv"
                android:text="立即登录"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/mobileNoTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nickNameTv"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/avatarIv"
                android:drawableLeft="@drawable/phonenumber"
                android:text="--"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/mine_arrow_right" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/cashLl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/cashTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--"
                    android:textColor="@color/gray_normal"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="余额"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white_gray"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/voucherLl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/voucherTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--"
                    android:textColor="@color/gray_normal"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="代金券"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white_gray" />

            <LinearLayout
                android:id="@+id/integralLl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/integralTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--"
                    android:textColor="@color/gray_normal"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="积分"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/theme_gray_color"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/mineCommentRl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/mine_comment"
                android:drawablePadding="8dp"
                android:text="@string/mine_comment"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="@color/white_gray"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/lackmealRegisterRl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/lackmeal_register"
                android:drawablePadding="8dp"
                android:text="@string/lackmeal_register"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="@color/white_gray"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/suggestionRl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/suggestion"
                android:drawablePadding="8dp"
                android:text="@string/suggestion"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="@color/white_gray"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/orderHelpRl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/order_help"
                android:drawablePadding="8dp"
                android:text="@string/order_help"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/theme_gray_color" />

        <TextView
            android:id="@+id/serviceMailTv"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/service_mail"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="@color/white_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp" >

            <TextView
                android:id="@+id/servicePhoneTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:text="@string/service_phone"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/serviceTimeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="10dp"
                android:text="@string/service_time"
                android:textColor="@color/gray_normal"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/callPhoneTv"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/call_phone_bg"
                android:drawableLeft="@drawable/call_phone"
                android:gravity="center"
                android:text="@string/call_phone"
                android:textColor="#6885F0"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>